force-app/main/default/objects/Lead/fields/CircEsteem_Program_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>CircEsteem_Program_Interested_In__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CircEsteem Program Interested In</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>