force-app/main/default/objects/Lead/fields/Number_of_Children_for_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Children_for_Enrollment__c</fullName>
    <label>Number of Children for Enrollment</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>