force-app/main/default/objects/Lead/fields/Program_of_Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_of_Interest_Type__c</fullName>
    <label>Program of Interest Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Camp</fullName>
            </value>
            <value>
                <fullName>After School Program</fullName>
            </value>
            <value>
                <fullName>CYC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>